objects/Job_Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Position</label>
        <referenceTo>Job_Position__c</referenceTo>
        <relationshipLabel>Job Candidates</relationshipLabel>
        <relationshipName>Job_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not contacted</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>HR interviewed</fullName>
                </value>
                <value>
                    <fullName>Product Team interviewed</fullName>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                </value>
                <value>
                    <fullName>Offer sent</fullName>
                </value>
                <value>
                    <fullName>Offer accepted</fullName>
                </value>
                <value>
                    <fullName>Not qualified</fullName>
                </value>
                <value>
                    <fullName>Contact again</fullName>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                </value>
                <value>
                    <fullName>Offer rejected</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Position__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Job Candidate Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>